[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milor-py"
version = "0.1.0"
description = "Pure-Python Milo — differential abundance testing for single-cell data on k-NN neighbourhoods, AnnData-native."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zehua Zeng", email = "starlitnightly@163.com" },
]
keywords = [
    "single-cell", "scRNA-seq", "milo", "miloR",
    "differential-abundance", "neighborhoods", "scanpy", "anndata",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "anndata>=0.9",
    "mudata>=0.2",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "patsy>=0.5",
    "inmoose>=0.8",        # edgepy QL-NB GLM solver used by da_nhoods
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/omicverse/py-miloR"
Repository = "https://github.com/omicverse/py-miloR"
Issues = "https://github.com/omicverse/py-miloR/issues"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["milor_py*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
